# karn

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  karn_db.py  pyproject.toml
.github/workflows/: ci.yml  release-agent.yml  release-cards-db.yml  release-rules-db.yml  release-server.yml  update-rules.yml
agent/: deck-building.md  gameplay.md  navigation.md  system-prompt.md
arsenal/: api.py  server.py  version.py
arsenal/cards/: __init__.py  _db.py  classifier.py  combos.json  config.py  downloader.py  embedder.py  graph_builder.py  prints_builder.py  query.py
arsenal/cards/data/: archetypes.md  examples.md  keywords.md  synergies.md
arsenal/cards/enrichers/: __init__.py  commander_spellbook.py  edhrec.py  scryfall_tagger.py
arsenal/rules/: __init__.py  generate_chunks.py  parser.py  search.py  vectordb.py
arsenal/rules/chunks/: 01_game_concepts.md  02_parts_of_a_card.md  03_card_types.md  04_zones.md  05_turn_structure.md  06_spells_abilities_and_effects.md  07_additional_rules.md  08_multiplayer_rules.md  09_casual_variants.md  glossary.md
arsenal/rules/data/: glossary.json  glossary_extra.md  keyword_index.json  rules.json  rules_summary.md
arsenal/rules/enrichers/: wiki.py
pyinstaller/: karn.spec
scripts/: build_db.py  build_executables.py  build_prints.py  build_rules.py  enrich_db.py  install_data.py  install_local.py  propagate_tags.py  self_update.py  upload_data.py
tests/: conftest.py
tests/smoke/: test_smoke.py
tests/unit/: test_bm25_search.py  test_card_classifier.py  test_rules_parser.py
