[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karn-arsenal"
version = "1.0.0"
description = "MTG Intelligence Backend — unified MCP server, HTTP API, build pipeline"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "mcp[cli]>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
]

[project.scripts]
karn              = "arsenal.server:main"
karn-api          = "arsenal.api:main"
karn-install-data = "scripts.install_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arsenal*", "agent*", "scripts*"]

[tool.setuptools.package-data]
"arsenal.rules" = [
    "chunks/*.md",
    "data/rules.json",
    "data/glossary.json",
    "data/keyword_index.json",
    "data/rules_summary.md",
    "data/glossary_extra.md",
]
"arsenal.cards" = ["data/*.md", "combos.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
